Revert "Merge branch 'master' of https://github.com/SergioRodriguez317/VenALaU"
This reverts commit 6f9e9c1e8e24627bbdec96fde6e1cf73ea737786, reversing
changes made to 42c72f006173f6506f3abe09f6f32b755d70ea04.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,5 +2,5 @@
 <resources>
     <color name="colorPrimary">#fdc700</color>
     <color name="colorPrimaryDark">#ffb300</color>
-    <color name="colorAccent">#33ffb300</color>
+    <color name="colorAccent">#0b0b0b</color>
 </resources>
