--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -10,10 +10,12 @@
     <ImageView
         android:id="@+id/ivSplash"
         android:layout_width="wrap_content"
-        android:layout_height="503dp"
+        android:layout_height="match_parent"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
         android:layout_marginHorizontal="5dp"
         android:layout_marginVertical="5dp"
         android:paddingLeft="5dp"
         android:paddingRight="5dp"
         android:src="@drawable/venalau" />
-</android.support.constraint.ConstraintLayout>
+</RelativeLayout>
