--- a/app/src/main/res/layout/activity_deportes_home.xml
+++ b/app/src/main/res/layout/activity_deportes_home.xml
@@ -1,9 +1,75 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@android:color/background_light"
     tools:context="com.example.sergiorodriguez.venalau.DeportesHomeActivity">
 
-</android.support.constraint.ConstraintLayout>
+
+    <Button
+        android:id="@+id/btnReservas"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/btnImplementos"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="20dp"
+        android:background="@color/colorAccent"
+        android:text="RESERVAS" />
+
+    <Button
+        android:id="@+id/btnImplementos"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_centerVertical="true"
+        android:background="@color/colorAccent"
+        android:text="IMPLEMENTOS DEPORTIVOS" />
+
+    <Button
+        android:id="@+id/btnCursos"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/btnImplementos"
+        android:layout_marginTop="18dp"
+        android:background="@color/colorAccent"
+        android:text="CURSOS PROMOCIONALES" />
+
+    <Button
+        android:id="@+id/btnPiscina"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/btnCursos"
+        android:layout_marginTop="28dp"
+        android:background="@color/colorAccent"
+        android:text="HORARIOS PISCINA" />
+
+    <Button
+        android:id="@+id/btnCuenta"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/btnPiscina"
+        android:layout_marginTop="27dp"
+        android:background="@color/colorAccent"
+        android:text="ESTADO DE CUENTA" />
+
+    <ImageView
+        android:id="@+id/imageView9"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@+id/btnReservas"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="49dp"
+        app:srcCompat="@drawable/venalau" />
+
+</RelativeLayout>
