--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -9,51 +9,67 @@
 
 
     <Button
-        android:id="@+id/btnRegistro"
-        android:layout_width="384dp"
-        android:layout_height="51dp"
-        android:text="Registrarse"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="195dp" />
-
-    <Button
-        android:id="@+id/btnIniciarSesion"
-        android:layout_width="386dp"
-        android:layout_height="51dp"
-        android:text="Iniciar Sesión"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="253dp" />
-
-    <Button
-        android:id="@+id/btnEventos"
-        android:layout_width="382dp"
-        android:layout_height="51dp"
-        android:text="Eventos"
-        tools:layout_editor_absoluteX="1dp"
-        tools:layout_editor_absoluteY="311dp" />
-
-    <Button
-        android:id="@+id/btnDeportes"
-        android:layout_width="384dp"
+        android:id="@+id/btnReservas"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Deportes"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="371dp" />
+        android:layout_above="@+id/btnImplementos"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="20dp"
+        android:background="@color/colorAccent"
+        android:text="Registrarse" />
+
+    <Button
+        android:id="@+id/btnImplementos"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_centerVertical="true"
+        android:background="@color/colorAccent"
+        android:text="INICIAR SESIÓN" />
+
+    <Button
+        android:id="@+id/btnCursos"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/btnImplementos"
+        android:layout_marginTop="18dp"
+        android:background="@color/colorAccent"
+        android:text="EVENTOS" />
+
+    <Button
+        android:id="@+id/btnPiscina"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/btnCursos"
+        android:layout_marginTop="28dp"
+        android:background="@color/colorAccent"
+        android:text="DEPORTES" />
 
     <Button
         android:id="@+id/btnAbout"
-        android:layout_width="384dp"
-        android:layout_height="51dp"
-        android:text="Acerca De"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="427dp" />
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/btnPiscina"
+        android:layout_marginTop="27dp"
+        android:background="@color/colorAccent"
+        android:text="ACERCA DE" />
 
     <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="175dp"
-        android:layout_height="148dp"
-        app:srcCompat="@mipmap/ic_launcher_round"
-        tools:layout_editor_absoluteX="105dp"
-        tools:layout_editor_absoluteY="16dp" />
+        android:id="@+id/imageView9"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@+id/btnReservas"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="49dp"
+        app:srcCompat="@drawable/venalau" />
 
-</android.support.constraint.ConstraintLayout>
+</RelativeLayout>
