--- a/app/src/main/res/layout/activity_estado_cuenta.xml
+++ b/app/src/main/res/layout/activity_estado_cuenta.xml
@@ -6,4 +6,68 @@
     android:layout_height="match_parent"
     tools:context="com.example.sergiorodriguez.venalau.EstadoCuentaActivity">
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:context="com.example.sergiorodriguez.venalau.ConfirmacionActivity">
+
+
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="125dp"
+            android:layout_height="98dp"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginLeft="9dp"
+            android:layout_marginStart="9dp"
+            android:layout_marginTop="12dp"
+            app:srcCompat="@mipmap/ic_launcher_round"
+            tools:layout_editor_absoluteX="105dp"
+            tools:layout_editor_absoluteY="16dp" />
+
+        <TextView
+            android:id="@+id/DiaReserva"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/imageView"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="32dp"
+            android:ems="10"
+            android:text="Dia Reserva" />
+
+        <TextView
+            android:id="@+id/HoraReserva"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_below="@+id/DiaReserva"
+            android:layout_marginTop="38dp"
+            android:ems="10"
+            android:text="Hora Reserva" />
+
+        <TextView
+            android:id="@+id/EspacioReservado"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_below="@+id/HoraReserva"
+            android:layout_marginTop="26dp"
+            android:ems="10"
+            android:text="Espacio Reservado" />
+
+        <TextView
+            android:id="@+id/Multa"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_below="@+id/EspacioReservado"
+            android:layout_marginTop="36dp"
+            android:ems="10"
+            android:text="Multa" />
+
+    </RelativeLayout>
 </android.support.constraint.ConstraintLayout>
